# PuzzleADaySolver

./: .gitignore  CMakeLists.txt  README.md  example.html  index.html
EMS/: base.html
PuzzleADaySolver/: CMakeLists.txt  main.cpp
Solver/: Board.h  BoardsStack.h  CMakeLists.txt  EnumClassIterator.h  Piece.h  PieceList.h  Solver.cpp  Solver.h
